--- a/css/spa.shell.css
+++ b/css/spa.shell.css
@@ -3,7 +3,8 @@ spa.shell.css
 Shell styles
  */
 .spa-shell-head, .spa-shell-head-logo, .spa-shell-head-acct, .spa-shell-head-search, .spa-shell-main,
-.spa-shell-main-nav, .spa-shell-main-content, .spa-shell-foot, .spa-shell-chat, .spa-shell-modal {
+.spa-shell-main-nav, .spa-shell-main-content, .spa-shell-foot, /*.spa-shell-chat,*/
+.spa-shell-modal {
   position: absolute;
 }
 
@@ -76,7 +77,8 @@ Shell styles
   height: 40px;
 }
 
-.spa-shell-chat {
+/*delete these from spa/css/spa.shell.css*/
+/*.spa-shell-chat {
   bottom: 0;
   right: 0;
   width: 300px;
@@ -91,7 +93,7 @@ Shell styles
 
 .spa-shell-chat:hover {
   background: #aa0000;
-}
+}*/
 
 .spa-shell-modal {
   margin-top: -200px;
@@ -105,4 +107,5 @@ Shell styles
   -moz-border-radius: 3px;
   border-radius: 3px;
   z-index: 3;
+  display: none;
 }
