--- a/css/spa.css
+++ b/css/spa.css
@@ -56,7 +56,7 @@ strong {
   bottom: 0;
   right: 0;
   min-height: 15em;
-  min-width: 35em;
+  /*min-width: 35em;*/
   overflow: hidden;
   background-color: #fff;
   /*-webkit-border-radius: 0 8px 0 8px;*/
