--- a/css/spa.chat.css
+++ b/css/spa.chat.css
@@ -6,7 +6,7 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  width: 25em;
+  width: 32em;
   height: 2em;
   background: #fff;
   -webkit-border-radius: 0.5em 0 0 0;
@@ -75,6 +75,140 @@
   top: 2em;
   left: 0;
   right: 0;
+}
+
+/*人员列表容器，位于聊天滑块左边的三分之一处*/
+.spa-chat-list {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 10em;
+}
+
+/*消息容器，位于聊天滑块右边三分之二*/
+.spa-chat-msg {
+  position: absolute;
+  top: 0;
+  left: 10em;
+  bottom: 0;
+  right: 0;
+}
+
+.spa-chat-msg-log,
+.spa-chat-list-box {
+  position: absolute;
+  top: 1em;
+  overflow-x: hidden;
+}
+
+/*消息记录*/
+.spa-chat-msg-log {
+  left: 0;
+  right: 1em;
+  bottom: 4em;
+  padding: 0.5em;
+  border: thin solid #888;
+  overflow-y: scroll;
+}
+
+/*普通消息*/
+.spa-chat-msg-log-msg {
+  background-color: #eee;
+}
+
+/*用户发送的消息*/
+.spa-chat-msg-log-me {
+  font-weight: 800;
+  color: #484;
+}
+
+/*警告消息*/
+.spa-chat-msg-log-alert {
+  font-style: italic;
+  background: #a88;
+  color: #ffffff;
+}
+
+/*人员列表容器*/
+.spa-chat-list-box {
+  left: 1em;
+  right: 1em;
+  bottom: 1em;
+  overflow-y: auto;
+  border: thin solid #888;
+  border-right-width: 0;
+  background-color: #888;
+  color: #ddd;
+  -webkit-border-radius: 0.5em 0 0 0;
+  -moz-border-radius: 0.5em 0 0 0;
+  border-radius: 0.5em 0 0 0;
+}
+
+.spa-chat-list-name, .spa-chat-list-note {
+  width: 100%;
+  padding: 0.1em 0.5em;
+}
+
+/*人员列表中的人员名字*/
+.spa-chat-list-name {
+  cursor: pointer;
+}
+
+.spa-chat-list-name:hover {
+  background-color: #aaa;
+  color: #888888;
+}
+
+.spa-chat-list-name.spa-x-select {
+  background-color: #fff;
+  color: #444444;
+}
+
+/*用户输入框*/
+.spa-chat-msg-in {
+  position: absolute;
+  height: 2em;
+  left: 0em;
+  right: 1em;
+  bottom: 1em;
+  border: thin solid #888;
+  background: #888888;
+}
+
+.spa-chat-msg-in input[type=text] {
+  position: absolute;
+  width: 75%;
+  height: 100%;
+  line-height: 100%;
+  padding: 0 0.5em;
+  border: 0;
+  background: #ddd;
+  color: #666666;
+}
+
+.spa-chat-msg-in input[type=text]:focus {
+  background: #ff8;
+  color: #222222;
+}
+
+.spa-chat-msg-send {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 100%;
+  line-height: 1.9em;
+  text-align: center;
+  color: #fff;
+  font-weight: 800;
+  cursor: pointer;
+}
+
+.spa-chat-msg-send:hover,
+.spa-chat-msg-send.spa-x-select {
+  background: #444444;
+  color: #ffff00;
 }
 
 .spa-chat-msgs {
